# atr

./: .gitignore  .kateproject  Archetype.kdev4  CMakeLists.txt  CXX20Modules.cmake  LICENSE  Linux-Clang.cmake  Linux-GCC.cmake  Logic.cpp  Logic2.hpp  README.md  TestModule.cpp  evaluation.sh  main.cpp  module.modulemap
ATR/Member/: Alias.cpp  AliasMapList.cpp  AlignBuffer.cpp  AlignBufferIterator.cpp  AlignBufferView.cpp  BitMemberIndexBuffer.cpp  BitMemberIndexIterator.cpp  ByteMemberIndexBuffer.cpp  ByteMemberIndexIterator.cpp  CMakeLists.txt  Compare.cpp  Composition.cpp  CompositionTransformer.cpp  Config.cpp  ConfigAffixer.cpp  ConfigBuilder.cpp  ConfigData.cpp  ConfigPrefixer.cpp  ConfigTransformer.cpp  Constant.cpp  Constants.cpp  Contains.cpp  CountedBuffer.cpp  CountedType.cpp  Definition.cpp  Difference.cpp  DynamicSize.cpp  DynamicTypes.cpp  Finalize.cpp  FlatComposer.cpp  FlatComposition.cpp  InfixDefinition.cpp  Info.cpp  Layout.cpp  LayoutBuffer.cpp  LayoutList.cpp  List.cpp  Name.cpp  NamedInfo.cpp  NamedType.cpp  (+14 more)
Evaluation/: Any.cpp  AnyBodies.cpp  AnyBody.hpp  AnyMain.cpp  Archetype.cpp  ArchetypeBodies.cpp  ArchetypeBodies.hpp  ArchetypeMain.cpp  ArchetypeShapes.cpp  ArchetypeShapes.hpp  CMakeLists.txt  CRTPBodies.cpp  CRTPBodies.hpp  CRTPShapes.cpp  CRTPShapes.hpp  Dyno.cpp  DynoBodies.cpp  DynoBodies.hpp  DynoMain.cpp  Polymorphic.cpp  PolymorphicBodies.cpp  PolymorphicBodies.hpp  PolymorphicMain.cpp  Replication.cpp  ReplicationBodies.cpp  ReplicationBodies.hpp  ReplicationMain.cpp  SOAATR.cpp  SOAReplication.cpp  Shared.cpp  Shared.hpp  TagATR.cpp  TagReplication.cpp  TypeErasure.cpp  TypeErasureBodies.cpp  TypeErasureBodies.hpp  TypeErasureMain.cpp  Variant.cpp  VariantMain.cpp  Virtual.cpp  (+26 more)
Evaluation/Any/: Any.cpp  Any.hpp  Bodies.cpp  Bodies.hpp  CMakeLists.txt  Main.cpp
Evaluation/Archetype/: Archetype.cpp  BasicBody.cpp  BasicBody.hpp  BasicShape.cpp  BasicShape.hpp  Bodies.cpp  CMakeLists.txt  Circle.cpp  Circle.hpp  CircleLayout.cpp  ComputeArea.cpp  ComputeArea.hpp  ComputeVolume.cpp  ComputeVolume.hpp  Cone.cpp  Cone.hpp  ConeLayout.cpp  Cube.cpp  Cube.hpp  CubeLayout.cpp  Cuboid.cpp  Cuboid.hpp  CuboidLayout.cpp  Cylinder.cpp  Cylinder.hpp  CylinderLayout.cpp  Ellipse.cpp  Ellipse.hpp  EllipseLayout.cpp  Ellipsoid.cpp  Ellipsoid.hpp  EllipsoidLayout.cpp  Head.cpp  Head.hpp  HeadLayout.cpp  Main.cpp  Product.cpp  Product.hpp  Pyramid.cpp  Pyramid.hpp  (+15 more)
Evaluation/CRTP/: BasicBody.cpp  BasicBody.hpp  BasicShape.cpp  BasicShape.hpp  BasicSphere.cpp  BasicSphere.hpp  Bodies.cpp  CMakeLists.txt  CRTP.cpp  CRTP.hpp  Circle.cpp  Circle.hpp  CircularShape.cpp  CircularShape.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  CubicBody.cpp  CubicBody.hpp  Cuboid.cpp  Cylinder.cpp  Cylinder.hpp  DepthIsHeight.cpp  DepthIsWidth.cpp  Ellipse.cpp  Ellipse.hpp  Ellipsoid.cpp  ExtendedShape.cpp  ExtendedShape.hpp  Head.cpp  Head.hpp  HeightIsWidth.cpp  HeightIsWidth.hpp  Pyramid.cpp  Pyramid.hpp  PyramidicBody.cpp  PyramidicBody.hpp  Rectangle.cpp  Rectangle.hpp  (+21 more)
Evaluation/Dependency/: CMakeLists.txt  CommonData.cpp  CopyConstruct.cpp  DataTypes.cpp  DefaultConstruct.cpp  DynamicArray.cpp  Dyno.cpp  Fraction.cpp  InPlaceConstruct.cpp  MainTemplate.cpp  MakeUniqueNoexcept.cpp  PiFraction.cpp  Polymorphic.cpp  PseudoRandomSequence.cpp  RandomAccessIteratorBase.cpp  TaggedArray.cpp  TransformReduce.cpp  TypeConstruct.cpp  TypeErasure.cpp  VerifyLoopSum.cpp
Evaluation/Dyno/: Bodies.cpp  Bodies.hpp  CMakeLists.txt  Dyno.cpp  Dyno.hpp  Main.cpp
Evaluation/Polymorphic/: Bodies.cpp  Bodies.hpp  CMakeLists.txt  Main.cpp  Polymorphic.cpp  Polymorphic.hpp
Evaluation/Replication/: Bodies.cpp  CMakeLists.txt  Circle.cpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cuboid.cpp  Cuboid.hpp  Cylinder.cpp  Cylinder.hpp  Ellipse.cpp  Ellipsoid.cpp  Ellipsoid.hpp  Head.cpp  Head.hpp  Main.cpp  Pyramid.cpp  Pyramid.hpp  Rectangle.cpp  Replication.cpp  Sphere.cpp  Sphere.hpp  Square.cpp  Triangle.cpp  VolumeComputer.cpp  VolumeComputer.hpp
Evaluation/SOAATR/: BasicBody.cpp  BasicShape.cpp  CMakeLists.txt  Circle.cpp  ComputeVolume.cpp  Cone.cpp  Cube.cpp  Cuboid.cpp  Cylinder.cpp  Ellipse.cpp  Ellipsoid.cpp  Head.cpp  Interface.cpp  InterfaceImpl.cpp  Product.cpp  Pyramid.cpp  Rectangle.cpp  Sphere.cpp  Square.cpp  Triangle.cpp
Evaluation/SOAReplication/: CMakeLists.txt  Circle.cpp  Cone.cpp  Cube.cpp  Cuboid.cpp  Cylinder.cpp  Ellipse.cpp  Ellipsoid.cpp  Head.cpp  Pyramid.cpp  Rectangle.cpp  SOAView.cpp  Sphere.cpp  Square.cpp  Tag.cpp  Triangle.cpp  View32.cpp
Evaluation/Shared/: CMakeLists.txt  CopyConstruct.cpp  DataTypes.cpp  DataTypes.hpp  Fraction.cpp  Fraction.hpp  InPlaceConstruct.cpp  InPlaceConstruct.hpp  MainTemplate.cpp  MainTemplate.hpp  PiFraction.cpp  PiFraction.hpp  PseudoRandomSequence.cpp  PseudoRandomSequence.hpp  Shared.cpp  SizeCheck.cpp  TypeConstruct.cpp  TypeConstruct.hpp
Evaluation/TagATR/: BasicBody.cpp  BasicShape.cpp  CMakeLists.txt  Circle.cpp  ComputeVolume.cpp  Cone.cpp  Cube.cpp  Cuboid.cpp  Cylinder.cpp  Ellipse.cpp  Ellipsoid.cpp  Head.cpp  Interface.cpp  InterfaceImpl.cpp  Product.cpp  Pyramid.cpp  Rectangle.cpp  (+3 more)
Logic/: CMakeLists.txt  ClauseFilter.hpp  ClauseRedundancy.hpp  Concepts.hpp  Conjunction.hpp  Conversion.hpp  Disjunction.hpp  DisjunctionSimplifier.hpp  Equivalence.hpp  Identity.hpp  Implication.hpp  LiteralFilter.hpp  Logic.cpp  MakeTerm.hpp  Module.cpp  Negation.hpp  RedundantClauseFilter.hpp  RedundantLiteralFilter.hpp  Replace.hpp  Simplifier.hpp  Simplify.hpp  Substitute.hpp  TermTag.hpp  Types.hpp
Meta/: Arithmetic.cpp  Auto.cpp  Bit.cpp  Buffer.cpp  Byte.cpp  CMakeLists.txt  Common.cpp  Concept.cpp  Concepts.cpp  Constraint.cpp  Data.cpp  Dispatch.cpp  Function.cpp  Functional.cpp  Generic.cpp  ID.cpp  Ignore.cpp  Index.cpp  IndexPack.cpp  Integer.cpp  Lex.cpp  Literals.cpp  Logic.cpp  Logic2.cpp  Math.cpp  Memory.cpp  Meta.cpp  Meta.hpp  MetaInfo.cpp  MetaInfo.hpp  Pack.cpp  Pack.hpp  Predicate.cpp  SelectByIndex.cpp  Size.cpp  String.cpp  Template.cpp  Template.hpp  Token.cpp  Trait.cpp  (+11 more)
Test/: CMakeLists.txt
(+2108 files in other folders)
