add_subdirectory(Dependency)
add_subdirectory(CRTP)

################################################################################
add_module_executable(
	Any
		Any.cpp
)
set_target_properties(
	Any
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(Archetype)
add_module_executable(
	Archetype
		Archetype.cpp
)
set_target_properties(
	Archetype
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_module_executable(
	Dyno
		Dyno.cpp
)
set_target_properties(
	Dyno
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_module_executable(
	Polymorphic
		Polymorphic.cpp
)
set_target_properties(
	Polymorphic
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(Replication)
add_module_executable(
	Replication
		Replication.cpp
)
set_target_properties(
	Replication
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(SOAATR)
add_module_executable(
	SOAATR
		SOAATR.cpp
)
set_target_properties(
	SOAATR
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(SOAReplication)
add_module_executable(
	SOAReplication
		SOAReplication.cpp
)
set_target_properties(
	SOAReplication
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(TagATR)
add_module_executable(
	TagATR
		TagATR.cpp
)
set_target_properties(
	TagATR
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(TagReplication)
add_module_executable(
	TagReplication
		TagReplication.cpp
)
set_target_properties(
	TagReplication
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_module_executable(
	TypeErasure
		TypeErasure.cpp
)
set_target_properties(
	TypeErasure
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_module_executable(
	Variant
		Variant.cpp
)
set_target_properties(
	Variant
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_subdirectory(Virtual)
add_module_executable(
	Virtual
		Virtual.cpp
)
set_target_properties(
	Virtual
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)

################################################################################
add_module_executable(
	Visitor
		Visitor.cpp
)
set_target_properties(
	Visitor
PROPERTIES
RUNTIME_OUTPUT_DIRECTORY
	"${CMAKE_BINARY_DIR}/bin/"
)
