add_module(Cone.cpp)
add_module(Cube.cpp)
add_module(Cuboid.cpp)
add_module(Cylinder.cpp)
add_module(Ellipsoid.cpp)
add_module(Head.cpp)
add_module(Pyramid.cpp)
add_module(Sphere.cpp)
add_module(VolumeComputer.cpp)

add_executable(
	evaluation_replication
		Main.cpp
)
target_compile_options(
	evaluation_replication
		PRIVATE
		-Wno-error
		-Wno-everything
)
add_module_dependencies(evaluation_replication)
