add_module(BasicBody.cpp)
add_module(BasicShape.cpp)
add_module(Circle.cpp)
add_module(CircularShape.cpp)
add_module(Cone.cpp)
add_module(Cube.cpp)
add_module(CubicBody.cpp)
add_module(Cuboid.cpp)
add_module(Cylinder.cpp)
add_module(Ellipse.cpp)
add_module(Ellipsoid.cpp)
add_module(ExtendedShape.cpp)
add_module(Head.cpp)
add_module(IBody.cpp)
add_module(IShape.cpp)
add_module(Pyramid.cpp)
add_module(PyramidicBody.cpp)
add_module(Rectangle.cpp)
add_module(RectangularShape.cpp)
add_module(Sphere.cpp)
add_module(SphericBody.cpp)
add_module(Square.cpp)
add_module(Triangle.cpp)
add_module(TriangularShape.cpp)

add_executable(
	evaluation_virtual
		Main.cpp
)
target_compile_options(
	evaluation_virtual
		PRIVATE
		-Wno-error
		-Wno-everything
)
add_module_dependencies(evaluation_virtual)
