add_single_file_modules(
	Array.cpp
	Const.cpp
	Construct.cpp
	CopyRef.cpp
	CV.cpp
	Ellipsis.cpp
	Extent.cpp
	Index.cpp
	LRef.cpp
	Mutable.cpp
	Noexcept.cpp
	Pointer.cpp
	Reference.cpp
	RRef.cpp
	SelectByIndex.cpp
	Sequence.cpp
	Specifier.cpp
	Type.cpp
	Volatile.cpp
)

add_subdirectory(Type)
add_subdirectory(Transform)
