add_module_object_library(
	Test.Meta.Size
	Size.cpp
)

add_subdirectory(Arithmetic)
add_subdirectory(Bit)
add_subdirectory(Buffer)
add_subdirectory(Data)
add_subdirectory(Lex)
add_subdirectory(Logic)
add_subdirectory(Memory)
add_subdirectory(Predicate)
add_subdirectory(Token)
add_subdirectory(Dispatch)
add_subdirectory(Functional)
