add_module_object_tests(
	Size
)

add_subdirectory(Arithmetic)
add_subdirectory(Auto)
add_subdirectory(Bit)
add_subdirectory(Buffer)
add_subdirectory(Data)
add_subdirectory(Dispatch)
add_subdirectory(Functional)
add_subdirectory(String)
add_subdirectory(Lex)
add_subdirectory(Logic)
add_subdirectory(Math)
add_subdirectory(Memory)
add_subdirectory(Predicate)
add_subdirectory(Random)
add_subdirectory(Token)
add_subdirectory(Unlinkable)
